<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desktop_wallpaper_video_game_super_mario_bros_mario_phone"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt1"
        android:layout_width="283dp"
        android:layout_height="94dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:fontFamily="@font/black_han_sans"
        android:hint="@string/ingrese_el_texto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulo" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:fontFamily="@font/black_han_sans"
        android:hint="@string/ingrese_el_otro_texto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txtcomparar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/black_han_sans"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <Button
        android:id="@+id/btncomparar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="246dp"
        android:layout_height="67dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/comparar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:typeface="normal"
        app:icon="@drawable/estrella_copia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcomparar"
        app:layout_constraintVertical_bias="0.339"
        app:shapeAppearance="@style/Base.Theme.Comparar"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/black_han_sans"
        android:tag="@string/app_name"
        android:text="@string/comparar_texto"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>